<resources>
    <string name="app_name">Jan Ellaj</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="titlename">Jan   Elaaj</string>
    <string name="email_id">Email ID</string>
    <string name="login">Sign In</string>

    <string name="otpSendthisNo">Otp will be send to this number.</string>
    <string name="servicesrate">Services &amp; Rates</string>
    <string name="applydiscount">Apply My Discounts</string>
    <string name="partner">P A R T N E R</string>
</resources>
