<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.janelaaj.component.CircleImageView
                android:id="@+id/logoImage"
                android:layout_width="@dimen/_100dp"
                android:layout_height="@dimen/_100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_15dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/headertitel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titlename"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/_5dp"
                android:textSize="@dimen/_30dp"
                />

            <TextView
                android:id="@+id/headersubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="PARTNER"
                android:textAlignment="center"
                android:textSize="@dimen/_12dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_2dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="@dimen/_25dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailIdView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45dp"
                android:layout_gravity="center"
                android:background="@drawable/edittextborder"
                android:ems="10"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14dp" />


            <EditText
                android:id="@+id/passwordView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@drawable/edittextborder"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/_30dp"
                android:layout_marginLeft="@dimen/_40dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_18dp">

                <TextView
                    android:id="@+id/problemSiging"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/facebook_dark"
                    android:text="Problem Signing In ?"
                    android:layout_marginRight="@dimen/_10dp"
                    android:textAlignment="center"
                    android:textSize="@dimen/_14dp" />

                <View
                    android:layout_width="@dimen/_2dp"
                    android:layout_height="@dimen/_20dp"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:layout_marginRight="@dimen/_5dp"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:id="@+id/singnUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10dp"
                    android:textColor="@color/facebook_dark"
                    android:text="SignUp?"
                    android:textSize="@dimen/_14dp" />


            </LinearLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_22dp"
                android:background="@drawable/login_border"
                android:minWidth="@dimen/_220dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_17dp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:text="Or"
                android:textAlignment="center"
                android:textSize="@dimen/_18dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="@dimen/_50dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_25dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/facebookButton"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/edittextborder"
                    android:gravity="center"
                    android:minWidth="@dimen/_150dp"
                    android:text="facebook"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_17dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/googleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_25dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittextborder"
                    android:gravity="center"
                    android:minWidth="@dimen/_150dp"
                    android:padding="@dimen/_5dp"
                    android:text="Google"
                    android:textAllCaps="false"
                    android:textColor="@color/google_color"
                    android:textSize="@dimen/_17dp"
                    android:textStyle="bold" />




            </LinearLayout>




        </LinearLayout>


    </LinearLayout>
</ScrollView>